--- a/cloud-databases-assignment.csproj
+++ b/cloud-databases-assignment.csproj
@@ -5,6 +5,7 @@
     <OutputType>Exe</OutputType>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>cloud_databases_assignment</RootNamespace>
+    <UserSecretsId>78874fd9-08a4-42db-8bb8-b231ecdf93ac</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
@@ -13,6 +14,9 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.0.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.3.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.10" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
+	<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.OpenApi" Version="1.4.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
