--- a/cloud-databases-assignment.csproj
+++ b/cloud-databases-assignment.csproj
@@ -17,6 +17,7 @@
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.10" />
 	<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
 	<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.OpenApi" Version="1.4.0" />
+	<PackageReference Include="SendGrid" Version="9.28.1" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
